--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -71,8 +71,8 @@ include_directories(${PROJECT_SOURCE_DIR}/src/WorldDecomp
                     ${PROJECT_SOURCE_DIR}/src/SpatialRelationsViz
                     ${PROJECT_SOURCE_DIR}/src/SpatialRelationsDemo
                     ${PROJECT_SOURCE_DIR}/src/HARRTs
-                    ${PROJECT_SOURCE_DIR}/src/HARRTsViz
-                    ${PROJECT_SOURCE_DIR}/src/HARRTsDemo
+ #                   ${PROJECT_SOURCE_DIR}/src/HARRTsViz
+ #                   ${PROJECT_SOURCE_DIR}/src/HARRTsDemo
                    )
 
 add_definitions(-Wall -g -O3)
@@ -82,5 +82,5 @@ add_subdirectory(SpatialRelations)
 add_subdirectory(SpatialRelationsViz)
 add_subdirectory(SpatialRelationsDemo)
 add_subdirectory(HARRTs)
-add_subdirectory(HARRTsViz)
-add_subdirectory(HARRTsDemo)
+#add_subdirectory(HARRTsViz)
+#add_subdirectory(HARRTsDemo)
