--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -64,7 +64,6 @@ endif()
 #message( "OpenCV_LIB:" ${OpenCV_LIBRARIES} )
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-
 #add the include directories to the build
 include_directories(${PROJECT_SOURCE_DIR}/src/WorldDecomp
                     ${PROJECT_SOURCE_DIR}/src/SpatialRelations
@@ -72,7 +71,7 @@ include_directories(${PROJECT_SOURCE_DIR}/src/WorldDecomp
                     ${PROJECT_SOURCE_DIR}/src/SpatialRelationsDemo
                     ${PROJECT_SOURCE_DIR}/src/HARRTs
                     ${PROJECT_SOURCE_DIR}/src/HARRTsViz
- #                   ${PROJECT_SOURCE_DIR}/src/HARRTsDemo
+                    ${PROJECT_SOURCE_DIR}/src/HARRTsDemo
                    )
 
 add_definitions(-Wall -g -O3)
@@ -83,4 +82,4 @@ add_subdirectory(SpatialRelationsViz)
 add_subdirectory(SpatialRelationsDemo)
 add_subdirectory(HARRTs)
 add_subdirectory(HARRTsViz)
-#add_subdirectory(HARRTsDemo)
+add_subdirectory(HARRTsDemo)
